# CppAndroidTest

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  README.md  gradle.properties  settings.gradle.kts
.claude/skills/add-benchmark/: SKILL.md
.claude/skills/device-bench/: SKILL.md
.github/workflows/: device-test.yml  quality.yml  release.yml  smoke.yml  tests.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.cpp  main.cpp
app/src/main/cpp/bench/: affinity.cpp  affinity.h  bench_main.cpp  diag.cpp  diag.h  hwcaps.cpp  hwcaps.h  json.h  registry.h  soc_info.cpp  soc_info.h  timer.h
app/src/main/cpp/bench/camera/: camera.cpp  camera.h
app/src/main/cpp/bench/cpu/: dot_int8.cpp  dot_int8.h  i8mm.cpp  i8mm.h  latency.cpp  latency.h  neon_fma.cpp  neon_fma.h  perf_counters.cpp  perf_counters.h  stream.cpp  stream.h  sustained.cpp  sustained.h  sve2.cpp  sve2.h
app/src/main/cpp/bench/sensors/: sensors.cpp  sensors.h
app/src/main/cpp/bench/stream/: streamer.cpp  streamer.h
app/src/main/cpp/bench/thermal/: sysfs.cpp  sysfs.h
app/src/main/kotlin/com/example/cppandroidtest/: MainActivity.kt
app/src/main/res/values/: strings.xml
scripts/: aggregate-runs.py  build-bench.sh  compare.py  dashboard.py  device-harness.sh  init-template.sh  live-dashboard.sh  run-bench.sh  smoke-check.sh  ui_tap.py
tests/: CMakeLists.txt  test_json.cpp  test_registry.cpp
